--- a/package.json
+++ b/package.json
@@ -22,5 +22,15 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@coreui/coreui": "^3.2.0",
+        "@coreui/icons": "^2.0.0-beta.3",
+        "@coreui/utils": "^1.3.1",
+        "@coreui/vue": "^3.0.12",
+        "@coreui/vue-chartjs": "^1.0.5",
+        "vue": "~2.6.11",
+        "vue-router": "~3.3.2",
+        "vuex": "~3.4.0"
     }
 }
