--- a/package.json
+++ b/package.json
@@ -85,15 +85,15 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue": "~2.6.11",
-        "vue-router": "~3.3.2",
-        "vuex": "~3.4.0",
         "bootstrap": "^4.4.1",
         "bootstrap-vue": "2.0.0-rc.1",
         "compass-mixins": "0.12.10",
         "flag-icon-css": "2.9.0",
         "font-awesome": "4.7.0",
         "mdi": "2.1.19",
-        "vue-md-date-picker": "1.0.15"
+        "vue": "~2.6.11",
+        "vue-md-date-picker": "1.0.15",
+        "vue-router": "~3.3.2",
+        "vuex": "^3.4.0"
     }
 }
