--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "mdi": "2.1.19",
         "vform": "^1.0.1",
         "vue": "~2.6.11",
+        "vue-cookies": "^1.7.4",
         "vue-md-date-picker": "1.0.15",
         "vue-router": "~3.3.2",
         "vuex": "^3.4.0"
