--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
-        "laravel/passport": "v10.0",
+        "laravel/passport": "v10.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0"
     },
